model User {
  id           String    @id @default(uuid())
  email        String    @unique
  passwordHash String    @map("password_hash")
  firstName    String    @map("first_name")
  lastName     String    @map("last_name")
  role         UserRole
  isActive     Boolean   @default(true) @map("is_active")
  lastLogin    DateTime? @map("last_login")
  createdAt    DateTime  @default(now()) @map("created_at")
  updatedAt    DateTime  @updatedAt @map("updated_at")
  deletedAt    DateTime? @map("deleted_at")

  // Relations
  refreshTokens          RefreshToken[]
  facultiesAsAdmin       Faculty[]              @relation("FacultyAdmin")
  facultyProfessors      FacultyProfessor[]
  facultyStudents        FacultyStudent[]
  subjectAssignments     UserSubjectAssignment[]
  uploadedContents       Content[]              @relation("UploadedBy")
  approvedContents       Content[]              @relation("ApprovedBy")
  contentApprovals       ContentApproval[]
  contentAccessLogs      ContentAccessLog[]

  @@map("users")
}

model RefreshToken {
  id         String    @id @default(uuid())
  userId     String    @map("user_id")
  tokenHash  String    @map("token_hash")
  expiresAt  DateTime  @map("expires_at")
  isRevoked  Boolean   @default(false) @map("is_revoked")
  deviceInfo String?   @map("device_info")
  createdAt  DateTime  @default(now()) @map("created_at")
  updatedAt  DateTime  @updatedAt @map("updated_at")
  deletedAt  DateTime? @map("deleted_at")

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([tokenHash])
  @@map("refresh_tokens")
}
